<resources>
    <string name="app_name">ProCampus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="button_map_text">MAP</string>
    <string name="title_activity_criar_pro">CriarProActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_text_hint">usuário do sigaa</string>
    <string name="password_text_hint">senha do sigaa</string>
    <string name="go_to_map_btn">Ir para o mapa</string>
    <string name="title_activity_inform">InformActivity</string>
    <string name="open_navigation_drawer">Abrir Menu</string>
    <string name="close_navigation_drawer">Fechar Menu</string>
    <string name="map_activity_toolbar_title">Mapa dos problemas</string>


    //Register Problem Activity
    <string name="problem_title_hint">Título</string>
    <string name="problem_category_hint">Categoria</string>
    <string name="problem_description_hint">Descrição</string>
    <string name="problem_priority_hint">Prioridade</string>
    <string name="problem_image_btn_label">Alterar Imagem</string>
    <string name="problem_image_hint">Adicione uma imagem</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_problem">UserProblemActivity</string>
    <string name="api_url">https://procampus.herokuapp.com/</string>
    <string name="problem_local_hint">Local</string>
    <string name="register_problem_error_msg">Esse campo é obrigatório</string>
    <string name="sigaa_api_base_url">http://apitestes.info.ufrn.br/</string>
    <string name="register_problem_success_msg">Problema Registrado com Sucesso</string>
    <string name="sigaa_client_id">pro-campus-id</string>
    <string name="sigaa_client_secret">procampus</string>
</resources>
