<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B6B6B6">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="60dp"
        android:textStyle="bold"
        android:textColor="#303F9F"
        android:fontFamily="Impact, fantasy"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="385dp"
        android:layout_height="50dp"
        android:id="@+id/usernameText"
        android:hint="@string/username_text_hint"
        android:textColorHint="#bbbbbb"
        android:background="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>


    <EditText
        android:layout_width="385dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:hint="@string/password_text_hint"
        android:textColorHint="#bbbbbb"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:text="Entrar"
        android:id="@+id/loginBtn"
        android:layout_marginTop="20dp"
        android:background="#2196F3"
        android:textColor="#ffffff"
        android:fontFamily="impact"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_map_btn"
        android:id="@+id/mapBtn"
        android:layout_marginTop="80dp"
        android:background="#2196F3"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="visible"
        android:layout_gravity="center"/>
</LinearLayout>
