<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldRegisterTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/fieldRegisterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/problem_title_hint" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldRegisterCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <AutoCompleteTextView
                    android:id="@+id/fieldRegisterCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/problem_category_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldRegisterDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/fieldRegisterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:hint="@string/problem_description_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldRegisterLocalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/fieldRegisterLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:hint="@string/problem_local_hint"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSelectLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Selecionar Local"
                android:textColor="@color/white"
                android:background="@drawable/login_button_layout"
                android:onClick="onClickHandler"/>

            <TextView
                android:id="@+id/prioridadeRegisterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/problem_priority_hint"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="10dp"/>

            <RadioGroup
                android:id="@+id/prioridadeRegisterRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:id="@+id/prioridadeRegisterRadioButtonOne"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:id="@+id/prioridadeRegisterRadioButtonTwo"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:id="@+id/prioridadeRadioButtonThree"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="4"
                    android:id="@+id/prioridadeRadioButtonFour"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:id="@+id/prioridadeRadioButtonFive"
                    android:checked="false" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp">

                <TextView
                    android:id="@+id/problemRgisterImageLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/problem_image_hint"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"/>

                <ImageView
                    android:id="@+id/problemRegisterImage"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/default_problem_image"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/btnAddImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/problem_image_btn_label"
                    android:textColor="@color/white"
                    android:background="@drawable/login_button_layout"
                    android:onClick="onClickHandler"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

